--- a/packaging/PKGBUILD
+++ b/packaging/PKGBUILD
@@ -1,16 +1,15 @@
-pkgname=the-wizard
+pkgname=wizado
 pkgver=0.1.0
 pkgrel=1
 pkgdesc="Hyprland hotkey + gamescope Steam couch mode helper (Omarchy/Arch)"
 arch=('any')
-url="https://github.com/REPLACE_ME/the-wizard"
+url="https://github.com/REPLACE_ME/wizado"
 license=('MIT')
-depends=('bash')
+depends=('bash' 'curl' 'python')
 optdepends=(
   'steam: Steam client'
   'gamescope: gamescope micro-compositor'
   'hyprland: Hyprland compositor (for keybind integration)'
-  'python: used to parse monitor resolution from hyprctl JSON'
   'jq: used by some Omarchy default binds (optional)'
 )
 install="${pkgname}.install"
@@ -19,10 +18,13 @@ source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz
 sha256sums=('SKIP')
 
 package() {
+  # The source tarball extracts to "wizado-${pkgver}" directory
+  cd "${pkgname}-${pkgver}"
+
   install -d "${pkgdir}/usr/share/${pkgname}"
   cp -a scripts "${pkgdir}/usr/share/${pkgname}/"
 
-  install -Dm755 "bin/the-wizard" "${pkgdir}/usr/bin/the-wizard"
+  install -Dm755 "bin/wizado" "${pkgdir}/usr/bin/wizado"
 }
 
 
