--- a/scripts/config/default.conf
+++ b/scripts/config/default.conf
@@ -4,7 +4,7 @@
 # Resolution (auto = detect, or specify like 2560x1440)
 WIZADO_RESOLUTION=auto
 
-# FSR Upscaling (off, quality, balanced, performance, ultra)
+# FSR Upscaling (off, ultra, quality, balanced, performance)
 # Renders at lower res, upscales to native - improves FPS
 WIZADO_FSR=off
 
@@ -14,19 +14,12 @@ WIZADO_FRAMELIMIT=0
 # Adaptive Sync / VRR (on, off)
 WIZADO_VRR=off
 
-# Color Management / HDR (on, off)
-# Keep OFF to prevent color issues when switching VTs
-WIZADO_HDR=off
-
 # MangoHud Performance Overlay (on, off)
 WIZADO_MANGOHUD=off
 
 # Steam UI Mode (gamepadui = Steam Deck UI, tenfoot = old Big Picture)
-WIZADO_STEAM_UI=gamepadui
+WIZADO_STEAM_UI=tenfoot
 
-# Launch Mode (tty = dedicated VT, nested = inside Hyprland)
-WIZADO_MODE=tty
-
-# Gaming TTY (which VT for tty mode)
-WIZADO_TTY=3
-
+# Workspace to use for gaming (1-10, default 10)
+# If occupied, wizado will find an empty workspace
+WIZADO_WORKSPACE=10
