Enhance Wizado setup and launcher scripts for improved Waybar integration and license management. Update Waybar module configuration to use absolute paths for script execution, add workspace management in the launcher, and streamline license TUI invocation. Improve user experience with clearer notifications and icon integration in Waybar output.

--- a/scripts/config/waybar-module.jsonc
+++ b/scripts/config/waybar-module.jsonc
@@ -2,6 +2,7 @@
 // Add this module to your waybar config's "modules-right" array
 // and include the module definition in your config file.
 //
+// Icon: nf-fa-hat_wizard ()
 // Example: "modules-right": ["...", "custom/wizado", "..."]
 
 {
