Clean up repo for production: remove bash scripts and build artifacts
- Remove old bash scripts (now implemented in Go)
- Remove makepkg build artifacts (pkg/, src/)
- Remove old tarballs and packages
- Update .gitignore for Go project
- Update README for Go binary
- Update install.sh for source builds
- Remove outdated GLOSSARY.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
+# Build artifacts
+wizado
+*.tar.gz
+*.tar.zst
+*.pkg.tar.*
+
+# makepkg directories
+pkg/
+src/
+
+# Go
+*.exe
+*.test
+*.out
+
+# Local testing
+PKGBUILD.local
+
+# IDE/OS
 .state/
 *.log
 .DS_Store
+.idea/
+.vscode/
+*.swp
+*~
 
+# Debug
+*.debug
