--- a/scripts/config/waybar-module.jsonc
+++ b/scripts/config/waybar-module.jsonc
@@ -9,11 +9,10 @@
   "custom/wizado": {
     "format": "{}",
     "return-type": "json",
-    "exec": "wizado-waybar",
-    "on-click": "wizado-launch",
-    "on-click-right": "wizado-config",
+    "exec": "wizado status",
+    "on-click": "wizado-menu-float",
+    "on-click-right": "wizado-menu-float",
     "interval": 60,
     "tooltip": true
   }
 }
-
