Add CHEATSHEET.md to .gitignore
- Updated .gitignore to exclude CHEATSHEET.md from version control, ensuring private/local files remain untracked.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ PKGBUILD.local
 # Private/local files (not for public repo)
 PRIVATE_NOTES.md
 PRIVATE_*.md
+CHEATSHEET.md
 .private/
 notes/
 TODO.local
