--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,8 @@ src/
 # Local testing
 PKGBUILD.local
 
-# Private/local files (not for public repo)
-PRIVATE_NOTES.md
-PRIVATE_*.md
-CHEATSHEET.md
-deploy.sh
-.private/
-notes/
-TODO.local
-*.local.md
+# Private development files
+.dev/
 
 # IDE/OS
 .state/
